# django-ga4-serverside

./: .gitignore  CHANGELOG.md  README.rst  pyproject.toml
django_ga4_serverside/: apps.py  middleware.py  utils.py
django_ga4_serverside/signals/: handlers.py
